manifests/minio/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ingress-minio
  namespace: minio
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-dns01
#    traefik.ingress.kubernetes.io/router.tls: "true"
#    kubernetes.io/ingress.class: "traefik"
#    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
#    traefik.ingress.kubernetes.io/router.entrypoints: http
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - 'minio.ccrow.org'
      secretName: minio-tls
  rules:
    - host: 'minio.ccrow.org'
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  number: 9000
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ingress-minioconsole
  namespace: minio
  annotations:
#    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod-dns01
#    kubernetes.io/ingress.class: "traefik"
#    kubernetes.io/ingress.class: nginx
#    traefik.ingress.kubernetes.io/router.entrypoints: http

spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - minioconsole.lan.ccrow.org
      secretName: minioconsole-tls
  rules:
    - host: minioconsole.lan.ccrow.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio-console
                port:
                  number: 9001
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpbun
  namespace: minio
spec:
  ingressClassName: nginx
  rules:
  - host: httpbun2.foo.com
    http:
      paths:
      - backend:
          service:
            name: minio-console
            port:
              number: 9001
        path: /
        pathType: Prefix
